@@ -18,6 +18,7 @@
 # Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #
 
+import pygtk; pygtk.require('2.0')
 import gtk
 import gconf
 
