@@ -1,3 +1,11 @@
+2005-10-24  Alexander Larsson  <alexl@redhat.com>
+
+	* admin-tool/gconfviewer.py:
+	* admin-tool/sabayon:
+	* admin-tool/sabayon-session:
+	* lib/userprofile.py:
+	Find correct pygtk version if installed in a non-default place.
+	
 2005-10-20  Sebastien Bacher  <seb128@debian.org>
 
 	* lib/Makefile.am: fix a typo with the sed command used 
